package edu.univalle.gadim.virtual_lab_platform.boot;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class VirtualLabPlatformApplication {

	public static void main(String[] args) {
		SpringApplication.run(VirtualLabPlatformApplication.class, args);
	}

}
